--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "url-shortener",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
+  "description": "URL Shortener API built with NestJS",
+  "author": "Rafael Henrique Pereira",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,9 +23,12 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -35,7 +38,9 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "^11.0.4",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
